src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');

a, a:visited {
  text-decoration: none;
}

.layout__container:first-of-type {
  background: #1c2260;
  border: 1px solid #1C2260;
  transition: all 0.6s ease-in;
}

.layout__section {
  margin: auto;
  margin-top: 24px;
  max-width: 1280px;
  min-height: 360px;
}

.welcome__container {
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Roboto', 'Arial', 'sans-serif';

  text-align: center;
  color: white;
}

.welcome__title {
  margin: 36px;
  padding: 12px;
  font-size: 2em;
  line-height: 1em;
  font-weight: 500;
}

.welcome__subtext {
  padding: 12px;
  font-size: 1.8em;
  line-height: 1.1em;
  font-weight: 300;
  text-align: center;
}

#shoppies-logo {
  max-height: 260px;
  margin: 0 24px;
}

#searchfield {
  max-width: 600px;
  padding: 0px 12px;
  margin: auto;
  margin-bottom: 12px;
}

.searchfield__header {
  text-align: center;
  margin: 0 12px 24px 12px;
}

.returnedlist__search-failed {
  width: 100%;
  padding: 60px;

  display: flex;
  align-items: center;
  justify-content: center;

  font-family: 'Roboto', 'Arial', 'sans-serif';
  font-size: 2em;
  color: #aaa;
}

.signin__container {
  min-height: 160px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.signin__button {
  display: flex;
  align-items: center;
  
  border-radius: 4px;
  margin-bottom: 16px;

  font-family: 'Roboto', 'Arial', 'sans-serif';
  font-weight: 500;
  font-size: 1em;

  min-width: 260px;
  min-height: 52px;
  padding: 4px;

  cursor: pointer;
}

  .as-user {
    background-color: #4285F4;
    color: white;
  }

  .as-user:hover {
    background-color: #5f94ed;
  }

  .as-guest {
    justify-content: center;
    font-size: 1.1em;
    color: #1c2260;
    border: 1px solid #1c2260;
  }

  .as-guest:hover {
    background-color: #ddd;
  }

.signin__text {
  width: 100%;
  text-align: center;
  font-weight: bold;
  font-size: 1.1em;
}

#signin__description {
  color: #888;
  text-align: center;
  display: inline;
  max-width: 260px;
}

#signin__processing {
  color: #888;
  text-align: center;
}

#signin__error {
  color: red;
  text-align: center;
}

.signout__button {
  min-width: 96px;
  min-height: 36px;
  margin: 24px;
  font-size: 1.2em;
  color: #1c2260;
}

.display-none {
  display: none !important;
}

.display-block {
  display: block !important;
}

.fade-in {
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 0.2s;
}

@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

